fix default button and search on ios

--- a/colours.css
+++ b/colours.css
@@ -23,6 +23,22 @@ footer{
     background-color: var(--colour-main-light);
 }
 
+a, a:hover, a:focus, a:active, button{
+    text-decoration: none;
+    color: inherit;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
+}
+
+input[type="search"]{
+    appearance: none;
+}
+
 input[type="text"], textarea{
     background-color: var(--colour-main-light);
 }
